--- a/package.json
+++ b/package.json
@@ -19,9 +19,22 @@
     "react-markdown": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "13.13.51",
-    "@types/react": "17.0.4",
+    "@types/node": "^13.13.51",
+    "@types/react": "^17.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1",
     "prisma": "2.21.2",
-    "typescript": "4.2.4"
+    "typescript": "^4.2.4"
   }
 }
